Working on SAD service

--- a/org.toxsoft.skf.sad.lib/src/org/toxsoft/skf/sad/lib/l10n/messages_ru_RU.properties
+++ b/org.toxsoft.skf.sad.lib/src/org/toxsoft/skf/sad/lib/l10n/messages_ru_RU.properties
@@ -1,2 +1,4 @@
-STR_APP_INFO   = MyApp
-STR_APP_INFO_D = Шаблон приложения MWS
+FMT_ERR_DOCUMENT_ID_ALREADY_EXISTS = Папка '%s': документ с идентификатором '%s' уже существует
+FMT_ERR_FOLDER_ID_ALREADY_EXISTS   = Папка с идентификатором '%s' уже существует
+FMT_WARN_DOCUMENT_ID_NOT_EXISTS    = Папка '%s': документ с идентификатором '%s' не существует
+FMT_WARN_FOLDER_ID_NOT_EXISTS      = Папка с идентификатором '%s' не существует
