--- a/org.toxsoft.skf.sad.lib/src/org/toxsoft/skf/sad/lib/l10n/messages_ka_GE.properties
+++ b/org.toxsoft.skf.sad.lib/src/org/toxsoft/skf/sad/lib/l10n/messages_ka_GE.properties
@@ -1,2 +1,4 @@
-STR_APP_INFO   = MyApp
-STR_APP_INFO_D = MWS აპლიკაციის შაბლონი
+FMT_ERR_DOCUMENT_ID_ALREADY_EXISTS = საქაღალდე '%s':: დოკუმენტი ID-ით '%s' უკვე არსებობს
+FMT_ERR_FOLDER_ID_ALREADY_EXISTS   = საქაღალდე ID-ით '%s' უკვე არსებობს
+FMT_WARN_DOCUMENT_ID_NOT_EXISTS    = საქაღალდე '%s':: დოკუმენტი ID-ით '%s' არ არსებობს
+FMT_WARN_FOLDER_ID_NOT_EXISTS      = საქაღალდე ID-ით '%s' არ არსებობს
