Working on SAD service

--- a/org.toxsoft.skf.sad.lib/src/org/toxsoft/skf/sad/lib/l10n/messages.properties
+++ b/org.toxsoft.skf.sad.lib/src/org/toxsoft/skf/sad/lib/l10n/messages.properties
@@ -1,4 +1,5 @@
-FMT_ERR_DOCUMENT_ID_ALREADY_EXISTS = Folder %s: document with the ID '%s' already exists
-FMT_ERR_FOLDER_ID_ALREADY_EXISTS   = Folder with the ID '%s' already exists
-FMT_WARN_DOCUMENT_ID_NOT_EXISTS    = Folder %s: document with the ID '%s' not exists
-FMT_WARN_FOLDER_ID_NOT_EXISTS      = Folder with the ID '%s' does not exists
+FMT_ERR_DOCUMENT_ID_ALREADY_EXISTS  = Folder %s: document with the ID '%s' already exists
+FMT_ERR_FOLDER_ID_ALREADY_EXISTS    = Folder with the ID '%s' already exists
+FMT_ERR_TEMPLDOC_NOT_OF_THIS_FOLDER = Folder %s: template document '%s' is from another folder '%s'
+FMT_WARN_DOCUMENT_ID_NOT_EXISTS     = Folder %s: document with the ID '%s' not exists
+FMT_WARN_FOLDER_ID_NOT_EXISTS       = Folder with the ID '%s' does not exists
