--- a/org.toxsoft.skf.sad.lib/src/org/toxsoft/skf/sad/lib/l10n/messages_ka_GE.properties
+++ b/org.toxsoft.skf.sad.lib/src/org/toxsoft/skf/sad/lib/l10n/messages_ka_GE.properties
@@ -1,4 +1,5 @@
-FMT_ERR_DOCUMENT_ID_ALREADY_EXISTS = საქაღალდე '%s':: დოკუმენტი ID-ით '%s' უკვე არსებობს
-FMT_ERR_FOLDER_ID_ALREADY_EXISTS   = საქაღალდე ID-ით '%s' უკვე არსებობს
-FMT_WARN_DOCUMENT_ID_NOT_EXISTS    = საქაღალდე '%s':: დოკუმენტი ID-ით '%s' არ არსებობს
-FMT_WARN_FOLDER_ID_NOT_EXISTS      = საქაღალდე ID-ით '%s' არ არსებობს
+FMT_ERR_DOCUMENT_ID_ALREADY_EXISTS  = ფოლდერი '%s':: დოკუმენტი ID-ით '%s' უკვე არსებობს
+FMT_ERR_FOLDER_ID_ALREADY_EXISTS    = ფოლდერი ID-ით '%s' უკვე არსებობს
+FMT_ERR_TEMPLDOC_NOT_OF_THIS_FOLDER = საქაღალდე '%s': შაბლონის დოკუმენტი '%s' არის სხვა ფოლდერიდან '%s' 
+FMT_WARN_DOCUMENT_ID_NOT_EXISTS     = ფოლდერი '%s':: დოკუმენტი ID-ით '%s' არ არსებობს
+FMT_WARN_FOLDER_ID_NOT_EXISTS       = ფოლდერი ID-ით '%s' არ არსებობს
