--- a/org.toxsoft.skf.sad.lib/src/org/toxsoft/skf/sad/lib/l10n/messages_ru_RU.properties
+++ b/org.toxsoft.skf.sad.lib/src/org/toxsoft/skf/sad/lib/l10n/messages_ru_RU.properties
@@ -1,4 +1,5 @@
-FMT_ERR_DOCUMENT_ID_ALREADY_EXISTS = Папка '%s': документ с идентификатором '%s' уже существует
-FMT_ERR_FOLDER_ID_ALREADY_EXISTS   = Папка с идентификатором '%s' уже существует
-FMT_WARN_DOCUMENT_ID_NOT_EXISTS    = Папка '%s': документ с идентификатором '%s' не существует
-FMT_WARN_FOLDER_ID_NOT_EXISTS      = Папка с идентификатором '%s' не существует
+FMT_ERR_DOCUMENT_ID_ALREADY_EXISTS  = Папка '%s': документ с идентификатором '%s' уже существует
+FMT_ERR_FOLDER_ID_ALREADY_EXISTS    = Папка с идентификатором '%s' уже существует
+FMT_ERR_TEMPLDOC_NOT_OF_THIS_FOLDER = Папка '%s': шаблон документа '%s' из другой папки '%s'
+FMT_WARN_DOCUMENT_ID_NOT_EXISTS     = Папка '%s': документ с идентификатором '%s' не существует
+FMT_WARN_FOLDER_ID_NOT_EXISTS       = Папка с идентификатором '%s' не существует
