SAD service implementation - alpha version

--- a/org.toxsoft.skf.sad.lib/src/org/toxsoft/skf/sad/lib/l10n/messages.properties
+++ b/org.toxsoft.skf.sad.lib/src/org/toxsoft/skf/sad/lib/l10n/messages.properties
@@ -1,5 +1,18 @@
-FMT_ERR_DOCUMENT_ID_ALREADY_EXISTS  = Folder %s: document with the ID '%s' already exists
-FMT_ERR_FOLDER_ID_ALREADY_EXISTS    = Folder with the ID '%s' already exists
-FMT_ERR_TEMPLDOC_NOT_OF_THIS_FOLDER = Folder %s: template document '%s' is from another folder '%s'
-FMT_WARN_DOCUMENT_ID_NOT_EXISTS     = Folder %s: document with the ID '%s' not exists
-FMT_WARN_FOLDER_ID_NOT_EXISTS       = Folder with the ID '%s' does not exists
+ESadContentStorageKind.STR_SCSK_CLOB        = CLOB
+ESadContentStorageKind.STR_SCSK_CLOB_D      = SAD content is stored as CLOB with 2GB restriction
+ESadContentStorageKind.STR_SCSK_CLOB_ZB64   = CLOB Zip-B64
+ESadContentStorageKind.STR_SCSK_CLOB_ZB64_D = SAD content is stored in a ZIP-compressed CLOB with Base64 encoding
+FMT_ERR_CANT_CREATE_NONE_DOCUMENT           = It is prohibited document creation with predefined ID '%s'
+FMT_ERR_CANT_CREATE_NONE_FOLDER             = It is prohibited folder creation with predefined ID '%s'
+FMT_ERR_CANT_REMOVE_FOLDER_WITH_DOCS        = Can not remove folder '%s', it contains %d document(s)
+FMT_ERR_DOCUMENT_ID_ALREADY_EXISTS          = Folder %s: document with the ID '%s' already exists
+FMT_ERR_FOLDER_ID_ALREADY_EXISTS            = Folder with the ID '%s' already exists
+FMT_ERR_TEMPLATE_DOC_NOT_FOUND              = Folder %s: tempate document with the ID '%s' does not exists
+FMT_WARN_DOCUMENT_ID_NOT_EXISTS             = Folder %s: document with the ID '%s' not exists
+FMT_WARN_FOLDER_ID_NOT_EXISTS               = Folder with the ID '%s' does not exists
+SkSadDocument.STR_ATR_DOCUMENT_ID           = Document ID
+SkSadDocument.STR_ATR_DOCUMENT_ID_D         = Unique identifier of the document, must be an IDpath
+SkSadDocument.STR_ATR_TEMPLATE_ID           = Template ID
+SkSadDocument.STR_ATR_TEMPLATE_ID_D         = The ID of the document used as a template or nothing to create the document from scratch
+SkSadFolder.STR_ATR_FOLDER_ID               = Folder ID
+SkSadFolder.STR_ATR_FOLDER_ID_D             = Unique identifier of the folder, must be an IDpath
