--- a/org.toxsoft.skf.sad.lib/src/org/toxsoft/skf/sad/lib/l10n/messages_ka_GE.properties
+++ b/org.toxsoft.skf.sad.lib/src/org/toxsoft/skf/sad/lib/l10n/messages_ka_GE.properties
@@ -1,5 +1,18 @@
-FMT_ERR_DOCUMENT_ID_ALREADY_EXISTS  = ფოლდერი '%s':: დოკუმენტი ID-ით '%s' უკვე არსებობს
-FMT_ERR_FOLDER_ID_ALREADY_EXISTS    = ფოლდერი ID-ით '%s' უკვე არსებობს
-FMT_ERR_TEMPLDOC_NOT_OF_THIS_FOLDER = საქაღალდე '%s': შაბლონის დოკუმენტი '%s' არის სხვა ფოლდერიდან '%s' 
-FMT_WARN_DOCUMENT_ID_NOT_EXISTS     = ფოლდერი '%s':: დოკუმენტი ID-ით '%s' არ არსებობს
-FMT_WARN_FOLDER_ID_NOT_EXISTS       = ფოლდერი ID-ით '%s' არ არსებობს
+ESadContentStorageKind.STR_SCSK_CLOB        = CLOB
+ESadContentStorageKind.STR_SCSK_CLOB_D      = SAD შიგთავსი ინახება CLOB-ის სახით 2 GB შეზღუდვით
+ESadContentStorageKind.STR_SCSK_CLOB_ZB64   = CLOB Zip-B64
+ESadContentStorageKind.STR_SCSK_CLOB_ZB64_D = SAD-ის შიგთავსი ინახება ZIP-შეკუმშულ CLOB-ში Base64 კოდირებით
+FMT_ERR_CANT_CREATE_NONE_DOCUMENT           = აკრძალულია დოკუმენტის შექმნა წინასწარ განსაზღვრული ID-ით '%s'
+FMT_ERR_CANT_CREATE_NONE_FOLDER             = აკრძალულია ფოლდერის შექმნა წინასწარ განსაზღვრული ID-ით '%s'
+FMT_ERR_CANT_REMOVE_FOLDER_WITH_DOCS        = ფოლდერის '%s' წაშლა შეუძლებელია, ის შეიცავს %d დოკუმენტს
+FMT_ERR_DOCUMENT_ID_ALREADY_EXISTS          = ფოლდერი '%s':: დოკუმენტი ID-ით '%s' უკვე არსებობს
+FMT_ERR_FOLDER_ID_ALREADY_EXISTS            = ფოლდერი ID-ით '%s' უკვე არსებობს
+FMT_ERR_TEMPLATE_DOC_NOT_FOUND              = ფოლდერი '%s':: შაბლონის დოკუმენტი ID-ით '%s' არ არსებობს
+FMT_WARN_DOCUMENT_ID_NOT_EXISTS             = ფოლდერი '%s':: დოკუმენტი ID-ით '%s' არ არსებობს
+FMT_WARN_FOLDER_ID_NOT_EXISTS               = ფოლდერი ID-ით '%s' არ არსებობს
+SkSadDocument.STR_ATR_DOCUMENT_ID           = დოკუმენტის IS
+SkSadDocument.STR_ATR_DOCUMENT_ID_D         = დოკუმენტის უნიკალური იდენტიფიკატორი, უნდა იყოს ID-გზა
+SkSadDocument.STR_ATR_TEMPLATE_ID           = შაბლონის ID
+SkSadDocument.STR_ATR_TEMPLATE_ID_D         = დოკუმენტის შაბლონად გამოყენებული ID ან არაფერი ნულიდან შესაქმნელად
+SkSadFolder.STR_ATR_FOLDER_ID               = ფოლდერის ID
+SkSadFolder.STR_ATR_FOLDER_ID_D             = საქაღალდის უნიკალური იდენტიფიკატორი, უნდა იყოს ID-გზა
