--- a/org.toxsoft.skf.sad.lib/src/org/toxsoft/skf/sad/lib/l10n/messages_ru_RU.properties
+++ b/org.toxsoft.skf.sad.lib/src/org/toxsoft/skf/sad/lib/l10n/messages_ru_RU.properties
@@ -1,5 +1,18 @@
-FMT_ERR_DOCUMENT_ID_ALREADY_EXISTS  = Папка '%s': документ с идентификатором '%s' уже существует
-FMT_ERR_FOLDER_ID_ALREADY_EXISTS    = Папка с идентификатором '%s' уже существует
-FMT_ERR_TEMPLDOC_NOT_OF_THIS_FOLDER = Папка '%s': шаблон документа '%s' из другой папки '%s'
-FMT_WARN_DOCUMENT_ID_NOT_EXISTS     = Папка '%s': документ с идентификатором '%s' не существует
-FMT_WARN_FOLDER_ID_NOT_EXISTS       = Папка с идентификатором '%s' не существует
+ESadContentStorageKind.STR_SCSK_CLOB        = CLOB
+ESadContentStorageKind.STR_SCSK_CLOB_D      = Содержимое SAD хранится в формате CLOB с ограничением в 2 ГБ
+ESadContentStorageKind.STR_SCSK_CLOB_ZB64   = CLOB Zip-B64
+ESadContentStorageKind.STR_SCSK_CLOB_ZB64_D = Содержимое SAD хранится в CLOB со сжатием в ZIP и кодированием Base64
+FMT_ERR_CANT_CREATE_NONE_DOCUMENT           = Запрещено создание документов с предопределенным идентификатором '%s'
+FMT_ERR_CANT_CREATE_NONE_FOLDER             = Запрещено создание папок с предопределенным идентификатором '%s'
+FMT_ERR_CANT_REMOVE_FOLDER_WITH_DOCS        = Невозможно удалить папку '%s', она содержит %d документ(а,ов)
+FMT_ERR_DOCUMENT_ID_ALREADY_EXISTS          = Папка '%s': документ с идентификатором '%s' уже существует
+FMT_ERR_FOLDER_ID_ALREADY_EXISTS            = Папка с идентификатором '%s' уже существует
+FMT_ERR_TEMPLATE_DOC_NOT_FOUND              = Папка '%s': шаблонный документ с идентификатором '%s' не существует
+FMT_WARN_DOCUMENT_ID_NOT_EXISTS             = Папка '%s': документ с идентификатором '%s' не существует
+FMT_WARN_FOLDER_ID_NOT_EXISTS               = Папка с идентификатором '%s' не существует
+SkSadDocument.STR_ATR_DOCUMENT_ID           = ID документа
+SkSadDocument.STR_ATR_DOCUMENT_ID_D         = Уникальный идентификатор документа, должен быть ИД-путем
+SkSadDocument.STR_ATR_TEMPLATE_ID           = ИД шаблона
+SkSadDocument.STR_ATR_TEMPLATE_ID_D         = Идентификатор документа, используемого в качестве шаблона, или ничего для создания документа с нуля.
+SkSadFolder.STR_ATR_FOLDER_ID               = ИД папки
+SkSadFolder.STR_ATR_FOLDER_ID_D             = Уникальный идентификатор папки, должен быть ИД-путем
